apps/piaware/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: piaware
  namespace: piaware
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: piaware
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ultrafeeder
            app.kubernetes.io/instance: ultrafeeder
      toPorts:
        - ports:
            - port: "30005"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dump978
            app.kubernetes.io/instance: dump978
      toPorts:
        - ports:
            - port: "30978"
              protocol: TCP
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
            - 100.64.0.0/10
